// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-validate - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Pre-deployment validation checkpoint. Run deep checks to ensure your application is ready for Azure deployment. Validates configuration, infrastructure, permissions, and prerequisites.
USE FOR: validate my app, check deployment readiness, run preflight checks, verify configuration, check if ready to deploy, validate azure.yaml, validate Bicep, test before deploying, troubleshoot deployment errors.
DO NOT USE FOR: creating or building apps (use azure-prepare), executing deployments (use azure-deploy).
",
  "extractedKeywords": [
    "application",
    "apps",
    "azure",
    "azure-deploy",
    "azure-prepare",
    "before",
    "bicep",
    "building",
    "check",
    "checkpoint",
    "checks",
    "configuration",
    "creating",
    "deep",
    "deploy",
    "deploying",
    "deployment",
    "deployments",
    "ensure",
    "errors",
    "executing",
    "infrastructure",
    "permissions",
    "pre-deployment",
    "preflight",
    "prerequisites",
    "readiness",
    "ready",
    "terraform",
    "test",
    "troubleshoot",
    "validate",
    "validates",
    "validation",
    "verify",
    "yaml",
    "your",
  ],
  "name": "azure-validate",
}
`;

exports[`azure-validate - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "application",
  "apps",
  "azure",
  "azure-deploy",
  "azure-prepare",
  "before",
  "bicep",
  "building",
  "check",
  "checkpoint",
  "checks",
  "configuration",
  "creating",
  "deep",
  "deploy",
  "deploying",
  "deployment",
  "deployments",
  "ensure",
  "errors",
  "executing",
  "infrastructure",
  "permissions",
  "pre-deployment",
  "preflight",
  "prerequisites",
  "readiness",
  "ready",
  "terraform",
  "test",
  "troubleshoot",
  "validate",
  "validates",
  "validation",
  "verify",
  "yaml",
  "your",
]
`;
